# contrib_bk

./: .gitignore
src/3DObjectReconstruction/: CMakeLists.txt
src/3DObjectReconstruction/include/: communicator.h  objectReconstr.h  reconstructionRoutine.h
src/3DObjectReconstruction/src/: communicator.cpp  main.cpp  objectReconstr.cpp  reconstructionRoutine.cpp
src/GURLSwrappers/: CMakeLists.txt
src/GURLSwrappers/GurlsClassificationBatch/: CMakeLists.txt  GurlsClassificationBatchModule.cpp  GurlsClassificationBatchModule.h  TrainingDatabase.cpp  TrainingDatabase.h  main.cpp
src/GURLSwrappers/thrift/: CMakeLists.txt  GurlsClassification.thrift
src/aquila/: AQUILA_ROOT.ini  CMakeLists.txt
src/aquila/aquila/: CMakeLists.txt
src/aquila/libraries/: CMakeLists.txt
src/aquila/modules/: CMakeLists.txt
src/bodySchemaControl/: CMakeLists.txt
src/bodySchemaControl/app/: CMakeLists.txt
src/bodySchemaControl/bodySchemaLib/: CMakeLists.txt
src/bodySchemaControl/src/: CMakeLists.txt
src/boltzmannMachineLibrary/: CMakeLists.txt
src/boltzmannMachineLibrary/app/: CMakeLists.txt
src/boltzmannMachineLibrary/src/: CMakeLists.txt
src/cognitiveArchitecture/: CMakeLists.txt
src/cognitiveArchitecture/app/: CMakeLists.txt
src/cognitiveArchitecture/src/: CMakeLists.txt
src/crawling/: CMakeLists.txt
src/crawling/app/: CMakeLists.txt
src/crawling/misc/: left_arm_init_seq.posleft_arm  right_leg_init_seq.posright_leg
src/darwin/: CMakeLists.txt
src/darwin/app/: CMakeLists.txt
src/darwin/src/: CMakeLists.txt
src/handSome/: CMakeLists.txt
src/handSome/apps/: DemoControl.cpp  DemoControlOld.cpp  TestCartesianImpedance.cpp  TestGaze.cpp  TestMain.cpp  testAutomaticUpdate.cpp  testRobot.cpp
src/handSome/include/: CartesianImpedance.hpp  JointImpedance.hpp  controller.hpp  gazeController.hpp  impController.hpp  robot.hpp
src/handSome/src/: CartesianImpedance.cpp  JointImpedance.cpp  controller.cpp  gazeController.cpp  impController.cpp  robot.cpp
src/iFaR/: CMakeLists.txt  iFaR.h.backup  ifarModule.ini  ifarModule.xml  main.cpp.backup
src/iFaR/src/: centerSurround.cpp  main.cpp
src/iKart/: CMakeLists.txt
src/iKart/app/: CMakeLists.txt
src/iKart/src/: CMakeLists.txt
src/interactiveObjectsLearning/: CMakeLists.txt
src/interactiveObjectsLearning/ScSPMClassifier/: CMakeLists.txt  SCSPMClassifier.cpp  SCSPMClassifier.h  main.cpp
src/interactiveObjectsLearning/app/: CMakeLists.txt
src/interactiveObjectsLearning/blobExtractor/: CMakeLists.txt  main.cpp
src/interactiveObjectsLearning/blobSelector/: CMakeLists.txt  main.cpp
src/interactiveObjectsLearning/iolRADHelper/: CMakeLists.txt  main.cpp
src/interactiveObjectsLearning/iolStateMachineHandler/: CMakeLists.txt
src/interactiveObjectsLearning/milClassifier/: CMakeLists.txt  SiftGPU_Extractor.cpp  SiftGPU_Extractor.h  main.cpp
src/interactiveObjectsLearning/speechRecognizer/: Program.cs  RobotGrammarManager.cs  RobotGrammarSpecification.txt  SpeechRecognizerClient.cs  SpeechRecognizerGUI.Designer.cs  SpeechRecognizerGUI.cs  SpeechRecognizerServer.cs  XmlGrammarExample.xml  speechRecognizer.csproj  speechRecognizer.sln
src/karma/: CMakeLists.txt
src/karma/app/: CMakeLists.txt
src/karma/karmaLearn/: CMakeLists.txt  main.cpp
src/karma/karmaManager/: CMakeLists.txt
src/karma/karmaMotor/: CMakeLists.txt  main.cpp
src/karma/karmaToolFinder/: CMakeLists.txt  main.cpp
src/karma/karmaToolProjection/: CMakeLists.txt
src/linearClassifierModule/: CMakeLists.txt
src/linearClassifierModule/liblinear-1.91/: Makefile
src/linearClassifierModule/src/: linearClassifierModule.cpp  linearClassifierThread.cpp  main.cpp
src/matlabViewers/: CMakeLists.txt
src/matlabViewers/app/: CMakeLists.txt
src/matlabViewers/src/: CMakeLists.txt
src/minimumBoundingBox/: CMakeLists.txt
src/minimumBoundingBox/src/: boundingBox.cpp  helpers.cpp  minBoundBox.cpp
src/mitcub/: CMakeLists.txt  FindSIFTGPU.cmake
src/mitcub/featureRepresentations/: CMakeLists.txt
src/mitcub/gurls/: CMakeLists.txt  License.txt  License.txt.old  README  doxygurls
src/mitcub/hmin/: CMakeLists.txt  License.txt  hminModule.cpp  main.cpp
src/mitcub/modules/: CMakeLists.txt
src/mitcub/supervectors/: CMakeLists.txt  main.cpp
src/mitcub/xml_stuff/: data_acquisition.xml  dataset2extractor.xml  mitcub_experiment.xml
src/morphoGen/: CMakeLists.txt
src/morphoGen/app/: CMakeLists.txt
src/morphoGen/morphoGenLib/: CMakeLists.txt
src/morphoGen/src/: CMakeLists.txt
src/multiBallHockey/: CMakeLists.txt
src/objectAura/: CMakeLists.txt
src/objectAura/app/: CMakeLists.txt
src/objectAura/src/: CMakeLists.txt
src/onTheFlyRecognition/: CMakeLists.txt
src/onTheFlyRecognition/app/: CMakeLists.txt
src/onTheFlyRecognition/src/: CMakeLists.txt
src/piSquare/: CMakeLists.txt
src/piSquare/piSquareDemo/: CMakeLists.txt  demoClient.cpp  demoClient.h
src/piSquare/piSquareDemo2/: CMakeLists.txt  demoClient2.cpp  demoClient2.h
src/pmpControl/: CMakeLists.txt  calib1.txt  calib2.txt  main.cpp  pmp.cpp  pmp.h  vision.cpp  vision.h
src/poeticon/: CMakeLists.txt
src/poeticon/app/: CMakeLists.txt
src/poeticon/poeticonpp/: CMakeLists.txt
src/poeticon/src/: CMakeLists.txt  activeObjRec-HowTo.txt
src/portScope/: CMakeCache.txt  CMakeLists.txt  main.cpp  moc_portScope.cpp  portScope.cpp  portScope.h
src/portScope/app/: CMakeLists.txt
src/portScope/conf/: FindQwt.cmake
src/reinforcementLearning/: CMakeLists.txt  MarkovDecisionProcess.cpp  MarkovDecisionProcess.h  main.cpp
src/roboskin/: CMakeLists.txt
src/roboskin/nao/: nao.cspsl
src/roboskin/safeReach/: CMakeLists.txt
src/roboskin/skinCalibration/: CMakeLists.txt
src/roboskin/skinCalibrationPlanner/: CMakeLists.txt
src/roboskin/skinForceControl/: CMakeLists.txt  psAcc  psB  psBvel  psC  psCtrlPnt  psD  psDdq  psDq  psErrF  psForces  psOrtho  psPos  psPosLink  psPwm  psQ  psTorques  psVel  psddB
src/simoxGrasping/: CMakeLists.txt  simox_setenv.sh
src/stereoAlign/: CMakeLists.txt
src/stereoAlign/src/: main.cpp  (+2 more)
src/tactileGrasp/: CMakeLists.txt
(+3321 files in other folders)
