# Copyright: (C) 2011 RobotCub Consortium
# Authors: David Vernon
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 2.6)
PROJECT(cognitiveArchitecture)

SET(NESTED_BUILD TRUE)

SET(CMAKE_INSTALL_PREFIX $ENV{ICUB_ROOT}/contrib)
SET(FOURIERVISION_DIR "${PROJECT_SOURCE_DIR}/src/fourierVision")

FIND_PACKAGE(YARP REQUIRED)
FIND_PACKAGE(ICUB REQUIRED)
FIND_PACKAGE(FOURIERVISION REQUIRED)

SET(CMAKE_MODULE_PATH ${YARP_MODULE_PATH} ${ICUB_MODULE_PATH} ${CMAKE_MODULE_PATH})
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${ICUB_DIR}/conf ${YARP_DIR}/conf)

INCLUDE_DIRECTORIES(
    ${FOURIERVISION_INCLUDE_DIRS}
)

INCLUDE(iCubHelpers)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_INSTALL_PREFIX}/lib)
# this doesn't happen automatically for makefiles
MAKE_DIRECTORY(${LIBRARY_OUTPUT_PATH})

LINK_LIBRARIES(${FOURIERVISION_LIBRARIES})

# default prefix for applications
set(ICUB_APPLICATIONS_PREFIX "$ENV{ICUB_ROOT}" CACHE PATH "Application path prefix")

ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(app)

